Adds new NoScript previews type enabled status to internals page

Bug: 782860
Change-Id: I0f0fd341e4035ea0e1c777580ac263e39bbf61fc
Reviewed-on: https://chromium-review.googlesource.com/764207
Commit-Queue: Doug Arnett <dougarnett@chromium.org>
Reviewed-by: Ryan Sturm <ryansturm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#515670}